功能：增强聊天可靠性与消息校验